# osqp

./: .gitignore  .gitmodules  .travis.yml  dub.sdl  meson.build  meson_options.txt
ci/travis/: script.sh
configure/: osqp_configure.d.in  osqp_configure.h.in
include/: constants.d  glob_opts.d  osqp_configure.d  osqp_configure.h  types.d
lin_sys/: lib_handler.d  meson.build
lin_sys/direct/: meson.build
lin_sys/direct/pardiso/: pardiso_interface.d  pardiso_loader.d
lin_sys/direct/qdldl/: meson.build  qdldl_interface.d
lin_sys/direct/qdldl/amd/include/: amd.d  amd_internal.d
lin_sys/direct/qdldl/amd/src/: SuiteSparse_config.d  amd_1.d  amd_2.d  amd_aat.d  amd_control.d  amd_defaults.d  amd_info.d  amd_order.d  amd_post_tree.d  amd_postorder.d  amd_preprocess.d  amd_valid.d
src/: auxil.d  cs.d  ctrlc.d  error.d  kkt.d  lin_alg.d  lin_sys.d  osqp.d  polish.d  proj.d  scaling.d  util.d
tests/: meson.build
tests/basic_qp/: meson.build
tests/basic_qp2/: meson.build
tests/lin_alg/: meson.build
tests/non_cvx/: meson.build
tests/primal_dual_infeasibility/: meson.build
tests/primal_infeasibility/: meson.build
tests/solve_linsys/: meson.build
tests/unconstrained/: meson.build
tests/update_matrices/: meson.build
