option('UNITTESTS', type : 'boolean', value : false, description : 'Enable unittests generation')
option('PRINTING', type : 'boolean', value : true, description : 'Enable solver printing')
option('PROFILING', type : 'boolean', value : true, description : 'Enable solver profiling (timing)')
option('CTRLC', type : 'boolean', value : true, description : 'Enable user interrupt (Ctrl-C)')
option('DFLOAT', type : 'boolean', value : false, description : 'Use float numbers instead of doubles')
option('DLONG', type : 'boolean', value : true, description : 'Use long integers (64bit) for indexing')
option('DEBUG', type : 'boolean', value : false, description : 'Debug mode')
option('COVERAGE', type : 'boolean', value : false, description : 'Perform code coverage')
option('ENABLE_MKL_PARDISO', type : 'boolean', value : true, description : 'Enable MKL Pardiso solver')

option('SYSTEM_NAME', type : 'string', value : 'Linux', description : 'Host OS type')
option('EMBEDDED', type : 'boolean', value : false, description : 'The code is generated for embedded platforms')
option('OSQP_CUSTOM_MEMORY', type : 'boolean', value : false, description : 'User custom memory management header')
option('CMAKE_SIZEOF_VOID_P', type : 'integer', value : 8, description : 'Size of void pointer. 4 for 32 bit, 8 for 64 bit')
option('MATLAB', type : 'boolean', value : false, description : 'Use MATLAB')
option('PYTHON', type : 'boolean', value : false, description : 'Python')
option('R_LANG', type : 'boolean', value : false, description : 'R_LANG')
option('PYTHON_INCLUDE_DIRS', type : 'string', value : '', description : 'Python include path')
option('MSVC', type : 'boolean', value : false, description : 'MSVC')
option('FORTRAN', type : 'boolean', value : false, description : 'FORTRAN')
