option('ARCH', type : 'string', value : 'x86_64', description : 'Architecture: x86 or x86_64')
option('UNITTESTS', type : 'boolean', value : true, description : 'Enable unittests generation')
option('PRINTING', type : 'boolean', value : false, description : 'Enable solver printing')
option('PROFILING', type : 'boolean', value : false, description : 'Enable solver profiling (timing)')
option('CTRLC', type : 'boolean', value : true, description : 'Enable user interrupt (Ctrl-C)')
option('DFLOAT', type : 'boolean', value : false, description : 'Use float numbers instead of doubles')
option('DLONG', type : 'boolean', value : true, description : 'Use long integers (64bit) for indexing')
option('DEBUG', type : 'boolean', value : false, description : 'Debug mode')
option('NDEBUG', type:'boolean', value : true, description : 'Always true')
option('COVERAGE', type : 'boolean', value : false, description : 'Perform code coverage')
option('ENABLE_MKL_PARDISO', type : 'boolean', value : false, description : 'Enable MKL Pardiso solver')

option('USE_EMBEDDED', type : 'boolean', value : false, description : 'The code is generated for embedded platforms')
option('EMBEDDED', type : 'string', value : '0', description : '1 - Embedded is ON. Matrix update not allowed. 2 - Embedded is ON. Matrix update allowed. Should be 0 for false USE_EMBEDDED')
option('OSQP_CUSTOM_MEMORY', type : 'boolean', value : false, description : 'Use custom memory management')
option('OSQP_CUSTOM_MEMORY_HEADER', type : 'string', value : 'custom_header.h', description : 'User custom memory management header')
option('MATLAB', type : 'boolean', value : false, description : 'Use MATLAB')
option('PYTHON', type : 'boolean', value : false, description : 'Python')
option('R_LANG', type : 'boolean', value : false, description : 'R_LANG')
option('PYTHON_INCLUDE_DIRS', type : 'string', value : '', description : 'Python include path')
option('FORTRAN', type : 'boolean', value : false, description : 'FORTRAN')
