  # Add subdirectories of all the tests
  subdir('basic_qp')
  subdir('basic_qp2')
  subdir('lin_alg')
  subdir('non_cvx')
  subdir('primal_dual_infeasibility')
  subdir('primal_infeasibility')
  subdir('solve_linsys')
  subdir('unconstrained')
  subdir('update_matrices')
  test_headers = [headers]
  codegen_test_headers = [codegen_headers]
