
  # Generating unittests data files using Python
  run_command('python3', 'generate_tests_data.py')

  test_include_dirs = ['tests/basic_qp',
                       'tests/basic_qp2',
                       'tests/lin_alg',
                       'tests/non_cvx',
                       'tests/primal_dual_infeasibility',
                       'tests/primal_infeasibility',
                       'tests/solve_linsys',
                       'tests/unconstrained',
                       'tests/update_matrices']
